# schema_data_generator

./: README.md  app.py  pyproject.toml  requirements.txt  schema.yaml
Deployment_Guide/: python_anywhere.md
src/schema_data_generator/: __init__.py  generator.py
tests/: test_schema_datatype.py
